preparing macho handling

--- a/srcs/Makefile
+++ b/srcs/Makefile
@@ -10,7 +10,15 @@
 #                                                                              #
 # **************************************************************************** #
 
+UNAME := $(shell uname)
+
+ifeq ($(UNAME), Linux)
 SRC = woody.c utils.c elf64.c
+endif
+ifeq ($(UNAME), Darwin)
+SRC = macho_woody.c utils.c macho64.c
+endif
+
 CC = gcc
 CFLAGS = -c -Wall -Wextra -Werror
 OBJ = $(SRC:.c=.o) 
@@ -19,17 +27,21 @@ NAME = woody_woodpacker
 
 all : $(NAME)
 
-$(NAME) : $(OBJ)
+$(NAME) : $(OBJ) encryption/encrypt.o
 	make -C libft
 	$(CC) -fsanitize=address -o $(NAME) $(OBJ)  encryption/encrypt.o libft/libft.a
+
+
+encryption/encrypt.o: encryption/encrypt.s
+	nasm -felf64 encryption/encrypt.s -o encryption/encrypt.o
 
 %.o: %.c
 	$(CC) $(CFLAGS) $? -o $@
 
 clean : 
-	rm -f $(OBJ) libft/*.o
+	rm -f $(OBJ) libft/*.o encryption/encrypt.o
 fclean :
-	rm -f $(OBJ) $(NAME) woody libft/libft.a libft/*o
+	rm -f $(OBJ) $(NAME) woody libft/libft.a libft/*o encryption/encrypt.o
 
 re : fclean all
 
